--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "reflect-metadata": "^0.1.8",
     "rimraf": "2.5.4",
     "rxjs": "5.0.0-beta.12",
-    "zone.js": "^0.6.26"
+    "zone.js": "^0.6.26",
+    "webpack-dev-server": "2.1.0-beta.0"
   },
   "devDependencies": {
     "@types/core-js": "^0.9.34",
@@ -113,7 +114,6 @@
     "typescript": "^2.0.3",
     "webpack": "2.1.0-beta.22",
     "webpack-dev-middleware": "1.7.0",
-    "webpack-dev-server": "2.1.0-beta.0",
     "webpack-md5-hash": "^0.0.5",
     "webpack-merge": "^0.14.0",
     "webpack-validator": "2.1.3"
