--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "validate-webpack:dev": "webpack-validator webpack.config.js --env.dev",
     "validate-webpack:prod": "webpack-validator webpack.config.js --env.prod",
     "webdriver-start": "./node_modules/protractor/bin/webdriver-manager update && ./node_modules/protractor/bin/webdriver-manager start",
-    "watch:test": "npm run test:unit -- --auto-watch --no-single-run"
+    "watch:test": "npm run test:unit -- --auto-watch --no-single-run",
+    "install": "npm run build:prod && ./node_modules/http-server/bin/http-server dist/ -d -p 8080 -a 0.0.0.0"
   },
   "dependencies": {
     "@angular/common": "2.1.1",
@@ -116,6 +117,7 @@
     "webpack-dev-server": "2.1.0-beta.0",
     "webpack-md5-hash": "^0.0.5",
     "webpack-merge": "^0.14.0",
-    "webpack-validator": "2.1.3"
+    "webpack-validator": "2.1.3",
+    "http-server": "^0.9.0"
   }
 }
