--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "protractor": "sleep 15 && ./node_modules/protractor/bin/protractor protractor.config.js",
     "reinstall": "rm -rf node_modules && npm cache clean && npm install",
     "setup": "npm install && npm run validate",
-    "start": "webpack-dev-server --inline --progress --host 0.0.0.0 --port 8088",
+    "start": "./node_modules/http-server/bin/http-server dist/ -d -p 8080 -a 0.0.0.0",
     "stats": "webpack --profile --json > stats.json",
     "test": "npm-run-all --serial validate test:unit",
     "test:func": "./run_functional_tests.sh",
@@ -41,7 +41,7 @@
     "validate-webpack:prod": "webpack-validator webpack.config.js --env.prod",
     "webdriver-start": "./node_modules/protractor/bin/webdriver-manager update && ./node_modules/protractor/bin/webdriver-manager start",
     "watch:test": "npm run test:unit -- --auto-watch --no-single-run",
-    "install": "npm run build:prod && ./node_modules/http-server/bin/http-server dist/ -d -p 8080 -a 0.0.0.0"
+    "install": "npm run build:prod"
   },
   "dependencies": {
     "@angular/common": "2.1.1",
