Comment what is not required during build assemble

--- a/templates/template_s2i.yml
+++ b/templates/template_s2i.yml
@@ -27,6 +27,7 @@ objects:
     source:
       git:
         uri: https://github.com/obsidian-toaster/generator-frontend.git
+        ref: test-generated
       type: Git
     strategy:
       type: Source
