--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ templates/template_old.yml
 *.launch
 .settings/
 .vscode
+*.iml
 
 # misc
 /.sass-cache
@@ -38,3 +39,6 @@ unit_tests.log
 #System Files
 .DS_Store
 Thumbs.db
+
+target/
+node/
