--- a/Dockerfile.deploy
+++ b/Dockerfile.deploy
@@ -1,18 +1,15 @@
-#Heavily inspired by https://github.com/fabric8io/fabric8-planner/blob/master/Dockerfile.deploy
-
-FROM registry.centos.org/kbsingh/openshift-nginx:latest
+FROM registry.centos.org/jboss/base-jdk:8
 MAINTAINER Vasek Pavlin <vasek@redhat.com>
 
-ENV LANG=en_US.utf8
-ENTRYPOINT /usr/bin/entrypoint.sh
+EXPOSE 8080
+EXPOSE 8443
+
+CMD ["java", "-jar", "launchpad-frontend-swarm.jar"]
 
 USER root
-ADD nginx.conf /etc/nginx/nginx.conf
+RUN chgrp -R 0 /opt/jboss &&\
+    chmod -R g+rw /opt/jboss &&\
+    find /opt/jboss -type d -exec chmod g+x {} +
+USER jboss
 
-COPY scripts/entrypoint.sh /usr/bin/entrypoint.sh
-RUN chmod +x /usr/bin/entrypoint.sh
-USER 997
-
-RUN rm /usr/share/nginx/html/*
-
-COPY dist /usr/share/nginx/html
+COPY target/launchpad-frontend-swarm.jar ./
